--- a/readme.adoc
+++ b/readme.adoc
@@ -1,5 +1,3 @@
-= Population Health Management
+= Population Health Management Processes
 
-Read this blog for more information:
-
-https://developers.redhat.com/blog/2020/02/19/designing-an-event-driven-business-process-at-scale-a-health-management-example-part-1/
+See https://github.com/mauriziocarioli/PHM-Processes-SB-service/readme.adoc
